@@ -1,3 +1,7 @@
+2020-05-04 (0.12.19)
+	INPUT crash #99
+	Fix compile warning with updated gcc
+
 2020-03-07 (0.12.19)
 	COMMON: implement DEFINEKEY undo #92
 	UI: added R157 colour theme #94
